<resources>
    <string name="app_name">Mega Reencle</string>
    <string name="crash_top_str">-----------------------------------------\n问题时间：%s\n</string>
    <string name="confirm">确 认</string>
    <string name="reset">重 置</string>
    <string name="input_user_id">请输入用户ID</string>
    <string name="input_pw">请输入密码</string>
    <string name="number_one">1</string>
    <string name="number_two">2</string>
    <string name="number_three">3</string>
    <string name="number_four">4</string>
    <string name="number_five">5</string>
    <string name="number_six">6</string>
    <string name="number_seven">7</string>
    <string name="number_eight">8</string>
    <string name="number_nine">9</string>
    <string name="number_zero">0</string>
    <string name="weight_is_being_measured">正在测量重量中\n请稍后…</string>
    <string name="please_waiting">请稍后…</string>
    <string name="back">返 回</string>
    <string name="lamplight">灯 光 1</string>
    <string name="inlet_motor">投 入 口 电 机</string>
    <string name="weighing_motor">称 重 板 电 机</string>
    <string name="stir_motor">搅 拌 电 机</string>
    <string name="output_motor">排 出 电 机</string>
    <string name="fan">风 扇</string>
    <string name="stop">停 止</string>
    <string name="close_door">关 闭</string>
    <string name="open_door">打 开</string>
    <string name="open">打 开</string>
    <string name="reverses">反 转</string>
    <string name="forward">正 转</string>
    <string name="white">白</string>
    <string name="purple">紫</string>
    <string name="cyan">青</string>
    <string name="yellow">黄</string>
    <string name="blue">蓝</string>
    <string name="green">绿</string>
    <string name="red">红</string>
    <string name="parameter_setting">参 数 设 置</string>
    <string name="control_options">控 制 选 项</string>
    <string name="language_settings">语 言 设 置</string>
    <string name="weighing_outside">外 部 称 重</string>
    <string name="inlet_mode">投 入 口 模 式</string>
    <string name="heating_temperature_setting">加 热 温 度 设 置 1</string>
    <string name="heating_temperature_setting2">加 热 温 度 设 置 2</string>
    <string name="inlet_closing">放 置 口 关 闭 中\n请 稍 后</string>
    <string name="inlet_opening">放 置 口 开 启 中\n请 稍 后</string>
    <string name="open_inlet">打 开 放 置 口</string>
    <string name="close_inlet">关 闭 放 置 口</string>
    <string name="this_time_plate_weighing">本次放置重量%s公斤</string>
    <string name="monthly_cumulative_placement">月度累积放置%s公斤</string>
    <string name="countdown">倒计时 %s S</string>
    <string name="kg">%skg</string>
    <string name="KG">%sKG</string>
    <string name="monthly_total">月投总量</string>
    <string name="daily_total">日投总量</string>
    <string name="daily_times">日投次数</string>
    <string name="time_weight">次投重量</string>
    <string name="now_putting_weight">当前投入重量</string>
    <string name="please_input_id">请输入id</string>
    <string name="input_admin_id">请输入管理员id</string>
    <string name="how_many_times">第%d次</string>
    <string name="total_times">第%d次</string>
    <string name="chinese" translatable="false">中文</string>
    <string name="english" translatable="false">English</string>
    <string name="korean" translatable="false">한국어</string>
    <string name="japanese" translatable="false">日本語</string>
    <string name="have">有</string>
    <string name="none">无</string>
    <string name="automation">自动</string>
    <string name="manual">手 动</string>
    <string name="mode_setting">模 式 设 置</string>
    <string name="apartment">apartment</string>
    <string name="shop">shop</string>
    <string name="weighing_mode">称 重 模 式</string>
    <string name="inside">内部</string>
    <string name="outside">外部</string>
    <string name="cancel">取 消</string>
    <string name="login_setting">登 录 设 置</string>
    <string name="heating_temperature">加热温度:</string>
    <string name="stop_temperature">停止温度:</string>
    <string name="start">开始</string>
    <string name="pw_error">密码错误</string>
    <string name="id_error">id错误</string>
    <string name="please_retry">出现了点问题，请重试</string>
    <string name="daily_inlet_limited">日 限 定 投 入 量</string>
    <string name="start_up">启 动</string>
    <string name="outside_weighing">外 部 称 重</string>
    <string name="status">状 态 确 认</string>
    <string name="humidity_setting">湿 度 设 置</string>
    <string name="dehumidification_humidity">除湿湿度:</string>
    <string name="stop_humidity">停止湿度:</string>
    <string name="zero_setting">置 零 设 置</string>
    <string name="net_weight">去 皮</string>
    <string name="zero">置 零</string>
    <string name="now_temperature">当 前 温 度:</string>
    <string name="now_humidity">当 前 湿 度:</string>
    <string name="now_weight">当前重量</string>
    <string name="stop_status">急 停 状 态:</string>
    <string name="inlet_status">投 入 口 状 态:</string>
    <string name="measuring_status">安 全 门 状 态:</string>
    <string name="outlet_status">排 出 口 状 态:</string>
    <string name="temperature">%f℃</string>
    <string name="close">关 闭</string>
    <string name="opnes">开启</string>
    <string name="heater_setting">加 热 设 置 1</string>
    <string name="heater_setting2">加 热 设 置 2</string>
    <string name="dehumidification_setting">烘 干 设 置</string>
    <string name="heater_manual">手 动</string>
    <string name="automatic">自 动</string>
    <string name="have_error">临时出了点问题</string>
    <string name="not_close">未关闭</string>
    <string name="device_info">设 备 信 息</string>
    <string name="heater_temperature">加 热 温 度 1:</string>
    <string name="heater_temperature2">加 热 温 度 2:</string>
    <string name="device_id">设 备 ID:</string>
    <string name="serial_connection_error">串口连接可能出现问题</string>
    <string name="pause">暂停</string>
    <string name="alarm">报警</string>
    <string name="trouble_log">故 障 记 录</string>
    <string name="unlock">解 锁</string>
    <string name="card_id">卡片ID</string>
    <string name="daily_inlet_weight">当日投入:</string>
    <string name="total_weight_24h">24H累计投入:</string>
    <string name="remaining_weight_24h">24H剩余可投入:</string>
    <string name="card_binding">卡片绑定</string>
    <string name="daily_inlet_weight2">当日\n投入</string>
    <string name="total_weight_24h2">24H累计\n投入</string>
    <string name="remaining_weight_24h2">24H剩余\n可投入</string>
    <string name="please_swipe_card">请刷卡</string>
    <string name="non_automatic_only_admin_can_login">非自动模式下，仅可登录管理员账号</string>
    <string name="pelese_first_open">请先开门</string>
    <string name="input_log">投入记录</string>
    <string name="inlet_time">投入时间</string>
    <string name="inlet_id">投入ID</string>
    <string name="inlet_weight">投入重量</string>
    <string name="login_type">登录方式</string>
    <string name="login_type_pw">密码登录</string>
    <string name="login_type_RFID">RFID登录</string>
    <string name="login_type_none">无</string>
    <string name="empty_data">当前无数据</string>
    <string name="power_source">电源</string>
    <string name="off">off</string>
    <string name="on">on</string>
    <string name="run_mode">运行模式</string>
    <string name="stir_motor2">搅拌电机</string>
    <string name="normal">normal</string>
    <string name="error">error</string>
    <string name="air_temperature">空气温度</string>
    <string name="heater_front">加热前</string>
    <string name="heater_front_temperature">加热前温度</string>
    <string name="heater_behind">加热后</string>
    <string name="heater_behind_temperature">加热后温度</string>
    <string name="dehumidifier">干燥机</string>
    <string name="air_humidity">空气湿度</string>
    <string name="light">照明</string>
    <string name="inlet_sensor">投入口感应器(O,C,D)</string>
    <string name="inlet_button">投入口按钮</string>
    <string name="measuring">安全门</string>
    <string name="outlet">排出口</string>
    <string name="exhaust_fan">排气扇</string>
    <string name="let_right">LED右</string>
    <string name="G">G</string>
    <string name="Y">Y</string>
    <string name="R">R</string>
    <string name="let_left">LED左</string>
    <string name="wind_presssure">风压</string>
    <string name="cuowu">错误</string>
    <string name="daily_total_inlet">当日总投入</string>
    <string name="have_trouble">出了点问题</string>
    <string name="stir_run_interval">搅 拌 运 行 间 隔</string>
    <string name="none2">none</string>
    <string name="trouble_info_stir">搅拌电机异常</string>
    <string name="trouble_info_outlet">排料口未关闭</string>
    <string name="trouble_info_observe">观察口未关闭</string>
    <string name="trouble_info_inlet">电动门异常</string>
    <string name="trouble_info_heating">加热异常</string>
    <string name="trouble_info_weigh">称重异常</string>
    <string name="trouble_info_humidity">湿度异常</string>
    <string name="trouble_info_wind_pressure">风压异常,请确认过滤网</string>
    <string name="trouble_info_stir_error">搅拌异常</string>
    <string name="trouble_info_safety_door">安全门未关闭</string>
    <string name="have_trouble_use_after_repair">存在故障，请修复后使用</string>
    <string name="trouble_remove">解除故障</string>
    <string name="click_remove_stop">点击确认解除急停！！！</string>
    <string name="stop_manual_remove_stop">急停状态，请手动解除急停</string>
    <string name="id_pw_input_error">用户密码输入错误</string>
    <string name="retry">请重试</string>
    <string name="id_or_pw_error">ID或密码错误</string>
    <string name="Logout">返回</string>
    <string name="normal_mode_setting">普通模式设置</string>
    <string name="alarm_total_inlet_weight">报 警 总 重 量</string>
    <string name="_24h_inlet_limited">24H 限 定 投 入 量</string>
    <string name="total_inlet_limited">总 限 定 投 入 量</string>
    <string name="weigh_alarm_setting">称 重 报 警 设 置</string>
    <string name="time">时间:</string>
    <string name="weight">重量:</string>
    <string name="inlet_timeout_setting">投 入 口 设 置</string>
    <string name="fan_humidity_setting">风 扇 湿 度 设 置</string>
    <string name="target_temperature">目标温度:</string>
    <string name="floating_range">浮动范围:</string>
    <string name="alarm_temperature">报警温度:</string>
    <string name="target_humidity">目标湿度:</string>
    <string name="inlet_timeout">超时时间:</string>
    <string name="inlet_voltage">低速电压:</string>
    <string name="fan_gear">档位:</string>
    <string name="fan_humidity">湿度:</string>
    <string name="fan_voltage">电压:</string>
    <string name="run_time">运行时间:</string>
    <string name="power_saving_mode_setting">节电模式设置</string>
    <string name="interval_time">间隔:</string>
    <string name="stri_senor_error">搅拌电机错误</string>
    <string name="manual1">手动1</string>
    <string name="manual2">手动2</string>
    <string name="manual3">手动3</string>
    <string name="led2">灯 光 2</string>
    <string name="lighting">照 明</string>
    <string name="trouble_time">故障时间</string>
    <string name="type">类型</string>
    <string name="trouble_content">故障内容</string>
    <string name="save">保 存</string>
    <string name="weight_time">称 重 时 间</string>
    <string name="feeding_before">投料前:</string>
    <string name="feeding_after">投料后:</string>
    <string name="no_limited">无限制</string>
    <string name="heating_temperature_alarm_setting">加 热 报 警 设 置</string>
    <string name="max_temp">最大温度:</string>
    <string name="min_temp">最小温度:</string>
    <string name="ignore_time">忽略时间:</string>
    <string name="max_weight">最大:</string>
    <string name="min_weight">最小:</string>
    <string name="please_discharge">请排料</string>
    <string name="excessive_daily_inlet">日投入量超重</string>
    <string name="error_toast">需要确认设备信息，请联系管理员</string>
    <string name="unbind">解绑</string>
    <string name="screensaver_setting">屏 保 设 置</string>
    <string name="time_format">yyyy-MM-dd HH:mm:ss</string>
    <string name="outlet_open">排料口已开启</string>
    <string name="please_check_net_and_retry">请检查网络后重试</string>
    <string name="ready_time">准备时间:</string>
    <string name="preparing">准备中</string>
    <string name="please_click_open_button">请点击开门按钮</string>
    <string name="back2">返回</string>
    <string name="Motor_Shaft_Status">搅拌轴状态</string>
    <string name="lock_unlock">unlock</string>
    <string name="_30_day">30天</string>
    <string name="_60_day">60天</string>
    <string name="_90_day">90天</string>
    <string name="delete">删除</string>
</resources>