<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_admin_inlet_log"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <include
        android:id="@+id/include"
        layout="@layout/activity_common" />

    <Button
        android:id="@+id/btn_back"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="86dp"
        android:background="@mipmap/return_white"
        android:fontFamily="@font/notosanskrmedium"
        android:gravity="center_vertical|end"
        android:includeFontPadding="false"
        android:lines="1"
        android:paddingStart="65dp"
        android:paddingEnd="16dp"
        android:text="@string/back2"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/green_304129"
        app:layout_constraintBottom_toTopOf="@id/rl_inlet_log"
        app:layout_constraintEnd_toEndOf="@id/rl_inlet_log"
        app:layout_constraintStart_toStartOf="@id/rl_inlet_log" />


    <me.grantland.widget.AutofitLayout
        android:id="@+id/auto_fit_layout_1_auto"
        android:layout_width="110dp"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@id/tv_inlet_time"
        app:layout_constraintStart_toStartOf="@id/tv_inlet_time">

        <Button
            android:id="@+id/btn_inlet_30day"
            style="@style/inlet_log_button"
            android:text="@string/_30_day" />
    </me.grantland.widget.AutofitLayout>

    <me.grantland.widget.AutofitLayout
        android:id="@+id/auto_fit_layout_1_auto2"
        android:layout_width="110dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/auto_fit_layout_1_auto"
        app:layout_constraintStart_toEndOf="@+id/auto_fit_layout_1_auto"
        app:layout_constraintTop_toTopOf="@+id/auto_fit_layout_1_auto">

        <Button
            android:id="@+id/btn_inlet_60day"
            style="@style/inlet_log_button"
            android:text="@string/_60_day" />
    </me.grantland.widget.AutofitLayout>

    <me.grantland.widget.AutofitLayout
        android:id="@+id/auto_fit_layout_1_auto3"
        android:layout_width="110dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/auto_fit_layout_1_auto2"
        app:layout_constraintStart_toEndOf="@+id/auto_fit_layout_1_auto2"
        app:layout_constraintTop_toTopOf="@+id/auto_fit_layout_1_auto2">

        <Button
            android:id="@+id/btn_inlet_90day"
            style="@style/inlet_log_button"
            android:text="@string/_90_day" />
    </me.grantland.widget.AutofitLayout>

    <me.grantland.widget.AutofitLayout
        android:id="@+id/auto_fit_layout_1_auto4"
        android:layout_width="110dp"
        android:layout_height="50dp"
        android:layout_marginStart="70dp"
        app:layout_constraintBottom_toBottomOf="@+id/auto_fit_layout_1_auto3"
        app:layout_constraintStart_toEndOf="@+id/auto_fit_layout_1_auto3"
        app:layout_constraintTop_toTopOf="@+id/auto_fit_layout_1_auto3">

        <Button
            android:id="@+id/btn_inlet_delete"
            style="@style/inlet_log_button"
            android:text="@string/delete" />
    </me.grantland.widget.AutofitLayout>


    <TextView
        android:id="@+id/tv_inlet_time"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:paddingBottom="4dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="140dp"
        android:fontFamily="@font/sourcejansanscnregular"
        android:includeFontPadding="false"
        android:text="@string/inlet_time"
        android:textColor="@color/green_304129"
        android:textSize="27sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_inlet_weight"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:fontFamily="@font/sourcejansanscnregular"
        android:includeFontPadding="false"
        android:text="@string/inlet_weight"
        android:paddingBottom="4dp"
        android:textColor="@color/green_304129"
        android:textSize="27sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tv_inlet_time"
        app:layout_constraintStart_toEndOf="@+id/tv_inlet_time"
        app:layout_constraintTop_toTopOf="@+id/tv_inlet_time" />

    <TextView
        android:id="@+id/tv_login_type"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:fontFamily="@font/sourcejansanscnregular"
        android:includeFontPadding="false"
        android:text="@string/login_type"
        android:paddingBottom="4dp"
        android:textColor="@color/green_304129"
        android:textSize="27sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tv_inlet_weight"
        app:layout_constraintStart_toEndOf="@+id/tv_inlet_weight"
        app:layout_constraintTop_toTopOf="@+id/tv_inlet_weight" />

    <TextView
        android:id="@+id/tv_inlet_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:fontFamily="@font/sourcejansanscnregular"
        android:includeFontPadding="false"
        android:text="@string/inlet_id"
        android:textColor="@color/green_304129"
        android:textSize="27sp"
        android:textStyle="bold"
        android:paddingBottom="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_login_type"
        app:layout_constraintStart_toEndOf="@+id/tv_login_type"
        app:layout_constraintTop_toTopOf="@+id/tv_login_type" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rl_inlet_log"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_inlet_time"
        app:layout_constraintTop_toBottomOf="@+id/tv_inlet_time"
        tools:listitem="@layout/item_rl_inlet_log" />

</androidx.constraintlayout.widget.ConstraintLayout>